--- a/blocks/footer/__nav-link/footer__nav-link.css
+++ b/blocks/footer/__nav-link/footer__nav-link.css
@@ -1,4 +1,4 @@
-.footer__nav_link {
+.footer__nav-link {
   margin: 0 15px 0 0;
   text-decoration: none;
   font-style: normal;
@@ -9,16 +9,16 @@
   transition: 0.4s;
 }
 
-.footer__nav_link:last-child {
+.footer__nav-link:last-child {
   margin: 0;
 }
 
-.footer__nav_link:hover {
+.footer__nav-link:hover {
   opacity: 0.8;
 }
 
 @media screen and (max-width: 426px) {
-  .footer__nav_link {
+  .footer__nav-link {
     margin: 0 0 32px 0;
     font-size: 24px;
     line-height: 24px;
