--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,31 +1,32 @@
 .place {
-  margin: 80px auto 0;
+  width: 100%;
   display: grid;
-  grid-template-columns: minmax(340px, 460px) 4fr;
+  grid-template-columns: minmax(440px, 460px) minmax(456px, 484px);
   grid-template-areas:
     "place__title place__website"
     "place__image place__paragraphs";
   grid-gap: 48px 40px;
+  margin: 80px 0 0;
 }
 
 @media screen and (max-width: 1024px) {
   .place {
+    grid-template-columns: minmax(340px, 440px) minmax(352px, 456px);
     grid-gap: 48px 32px;
-    margin: 80px 48px 0;
   }
 }
 
 @media screen and (max-width: 768px) {
   .place  {
+    margin: 73px 0 0;
     grid-gap: 48px 28px;
-    margin: 73px 24px 0;
-    grid-template-columns: 340px 352px;
+    grid-template-columns: minmax(auto, 340px) minmax(auto, 352px);
   }
 }
 
 @media screen and (max-width: 700px) {
   .place  {
-    margin: 50px 0 0;
+    margin: 64px 0 0;
     grid-template-columns: 1fr;
     grid-template-areas:
     "place__title"
