--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,14 +1,20 @@
 .places {
-  width: 100%;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
   max-width: 984px;
+  margin: 0 auto;
 }
 
 @media screen and (max-width: 1024px) {
   .places {
+    margin: 0 48px;
     max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .places  {
+    margin: 0 24px;
   }
 }
 
