--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -14,3 +14,10 @@
   cursor: pointer;
   color: #f2f2f2;
 }
+
+@media screen and (max-width: 400px) {
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 20px;
+  }
+}
