--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,6 @@
 .cover {
   max-width: 1184px;
-  height: 740px;
+  min-height: 740px;
   position: relative;
   margin: 92px auto;
   background: center / cover no-repeat url(../../images/cover-trains.jpg);
@@ -14,18 +14,19 @@
   .cover {
     margin: 92px 0;
     width: 100%;
+    min-height: 640px;
   }
 }
 
 @media screen and (max-width: 769px) {
   .cover {
-    height: 480px;
+    min-height: 480px;
   }
 }
 
 @media screen and (max-width: 321px) {
   .cover {
     margin: 66px 0 64px;
-    height: 200px;
+    min-height: 200px;
   }
 }
