--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,6 +5,13 @@
   justify-content: space-between;
 }
 
+@media screen and (max-width: 768px) {
+  .footer {
+    width: 100%;
+    margin: 0;
+  }
+}
+
 @media screen and (max-width: 426px) {
   .footer {
     flex-direction: column;
