--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -6,8 +6,7 @@
 @media screen and (max-width: 1024px) {
   .intro {
     max-width: 928px;
-    padding: 48px;
-    margin: 0 auto;
+    padding: 0 48px;
   }
 }
 
