--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -11,6 +11,13 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  .lead__image {
+    width: 100%;
+    height: auto;
+  }
+}
+
 @media screen and (max-width: 321px) {
   .lead__image {
     width: 100%;
