--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,3 +5,9 @@
   flex-direction: column;
   align-items: center;
 }
+
+@media screen and (max-width: 768px) {
+  .lead {
+    margin: 56px auto 88px;
+  }
+}
