--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,4 +1,10 @@
 .photo-grid__item {
-  box-sizing: content-box;
+  box-sizing: border-box;
   width: 100%;
+}
+
+@media screen and (max-width: 320px) {
+  .photo-grid__item {
+    max-width: 288px;
+}
 }
