--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -13,6 +13,12 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  .photo-grid {
+    margin: 88px 24px;
+  }
+}
+
 @media screen and (max-width: 321px) {
   .photo-grid {
     margin: 92px 16px;
