--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,25 +1,5 @@
 .place__image {
   grid-area: place__image;
-  object-fit: cover;
-  width: 100%;
-  max-width: 460px;
+  max-width: 100%;
+  justify-self: center;
 }
-
-@media screen and (max-width: 1024px) {
-  .place__image {
-    max-width: 440px;
-  }
-}
-
-@media screen and (max-width: 700px) {
-  .place__image {
-    max-width: none;
-  }
-}
-
-@media screen and (max-width: 426px) {
-  .place__image {
-    width: 100%;
-  }
-}
-
