--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -6,6 +6,12 @@
   line-height: 163%;
 }
 
+@media screen and (max-width: 768px) {
+  .place__paragraph {
+    font-size: 16px;
+  }
+}
+
 .place__paragraph:first-of-type {
   margin: 0 0 27px;
 }
