--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -12,9 +12,15 @@
   }
 }
 
+@media screen and (max-width: 940px) {
+  .places {
+    max-width: 100%;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .places  {
-    margin: 0 24px;
+    margin: 0;
   }
 }
 
