--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,5 +1,6 @@
 .cover__subtitle {
   margin: 0;
+  padding: 0;
   max-width: 360px;
   font-style: normal;
   font-weight: normal;
@@ -7,8 +8,9 @@
   line-height: 22px;
   text-align: center;
   position: relative;
-  z-index: 2;
+  z-index: 3;
   user-select: none;
+  color: #ffffff;
 }
 
 @media screen and (max-width: 321px) {
