--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,5 +1,6 @@
 .cover__title {
   margin: 0 0 32px;
+  padding: 0;
   max-width: 560px;
   font-style: normal;
   font-weight: 900;
@@ -7,8 +8,9 @@
   line-height: 76px;
   text-align: center;
   position: relative;
-  z-index: 2;
+  z-index: 3;
   user-select: none;
+  color: #ffffff;
 }
 
 @media screen and (max-width: 500px) {
