--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,4 +1,5 @@
 .footer__copyright {
+  white-space: nowrap;
   margin: 0;
   padding: 0;
   font-style: normal;
@@ -7,7 +8,7 @@
   line-height: 16px;
 }
 
-@media screen and (max-width: 426px) {
+@media screen and (max-width: 700px) {
   .footer__copyright {
     margin: 48px 0 24px 0;
   }
