--- a/blocks/footer/__nav/footer__nav.css
+++ b/blocks/footer/__nav/footer__nav.css
@@ -1,13 +1,13 @@
 .footer__nav {
+  width: 100%;
   display: flex;
   flex-direction: row;
   margin: 0;
   padding: 0;
 }
 
-@media screen and (max-width: 426px) {
+@media screen and (max-width: 700px) {
   .footer__nav {
-    display: flex;
     flex-direction: column;
   }
 }
