--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -7,14 +7,15 @@
 
 @media screen and (max-width: 768px) {
   .footer {
-    width: 100%;
-    margin: 0;
+    width: auto;
+    margin: 24px;
   }
 }
 
-@media screen and (max-width: 426px) {
+@media screen and (max-width: 700px) {
   .footer {
     flex-direction: column;
-    margin: 0 0 24px 16px;
+    margin: 0;
+    padding: 0 0 24px 16px;
   }
 }
