--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,12 +1,14 @@
 .header__link {
-  text-decoration: none;
-  list-style: none;
+  font-family: 'Inter', 'Arial', sans-serif;
   font-size: 24px;
   line-height: 28px;
-}
-
-.header__link:first-of-type {
-  margin: 0 18px 0 0;
+  font-style: normal;
+  font-weight: normal;
+  color: #FFFFFF;
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+  transition: 0.5s;
 }
 
 .header__link:hover {
