--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,6 +1,7 @@
 .intro__text {
+  padding: 0;
   max-width: 690px;
-  margin: 40px 0 33px;
+  margin: 40px 0 34px;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
