--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -6,13 +6,12 @@
 @media screen and (max-width: 1024px) {
   .intro {
     max-width: 928px;
-    padding: 0 48px;
+    margin: 0 48px;
   }
 }
 
-@media screen and (max-width: 321px) {
+@media screen and (max-width: 550px) {
   .intro {
-    padding: 0;
     margin: 0 16px;
   }
 }
