--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,4 +1,5 @@
 .lead__title {
+  width: 100%;
   font-style: normal;
   font-weight: 900;
   font-size: 96px;
@@ -6,6 +7,7 @@
   text-align: center;
   max-width: 720px;
   margin: 0;
+  padding: 0;
   user-select: none;
 }
 
