--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -3,8 +3,10 @@
   width: 100%;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 335px) {
   .photo-grid__item {
-    max-width: 288px;
+    width: calc(100% - 32px);
+    margin: 0 16px;
+  }
 }
-}
+
