--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,5 +1,5 @@
 .photo-grid {
-  margin: 92px 48px;
+  margin: 92px 0;
   display: grid;
   grid-auto-flow: dense;
   grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
@@ -19,8 +19,8 @@
   }
 }
 
-@media screen and (max-width: 321px) {
+@media screen and (max-width: 335px) {
   .photo-grid {
-    margin: 92px 16px;
+    margin: 92px 0;
   }
 }
