--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,5 +1,6 @@
 .place__image {
   grid-area: place__image;
-  max-width: 100%;
+  box-sizing: border-box;
+  width: 100%;
   justify-self: center;
 }
