--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,7 +1,6 @@
 .photo-grid {
-  margin: 92px 0;
+  margin: 92px 48px;
   display: grid;
-  grid-auto-flow: dense;
   grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
   gap: 16px;
 }
