--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -5,9 +5,15 @@
   pointer-events: none;
 }
 
-@media  screen and (max-width: 400px) {
+@media screen and (max-width: 768px) {
   .header__logo {
-    margin: 16px auto 0 16px;
+    margin: 28px 0 0 24px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .header__logo {
+    margin: 16px 0 0 16px;
     width: 142px;
     height: 42px;
   }
