--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,25 +1,34 @@
 .photo-grid {
-  margin: 92px 48px;
+  box-sizing: border-box;
+  padding: 92px 48px;
+  width: 100%;
+  margin: 0;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
+  grid-auto-flow: dense;
+  grid-template-columns: repeat(auto-fit, minmax(276px, 1fr));
   gap: 16px;
+}
+
+@media screen and (max-width: 1220px) {
+  .photo-grid {
+    padding: 92px 48px;
+  }
 }
 
 @media screen and (max-width: 1024px) {
   .photo-grid {
     gap: 14px;
-    margin: 92px 24px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .photo-grid {
-    margin: 88px 24px;
+    padding: 88px 24px;
   }
 }
 
 @media screen and (max-width: 335px) {
   .photo-grid {
-    margin: 92px 0;
+    padding: 92px 0;
   }
 }
