--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -7,7 +7,7 @@
   line-height: 76px;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 980px) {
   .place__title {
     font-size: 42px;
     line-height: 46px;
@@ -18,6 +18,11 @@
   .place__title {
     font-size: 32px;
     line-height: 35px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .place__title {
     margin: 0 16px;
   }
 }
